# ippusbxd

./: changelog  ippusbxd_1.22.orig.tar.gz.delta  ippusbxd_1.22.orig.tar.gz.id  ippusbxd_1.23.orig.tar.gz.delta  ippusbxd_1.23.orig.tar.gz.id  ippusbxd_1.30.orig.tar.gz.delta  ippusbxd_1.30.orig.tar.gz.id  ippusbxd_1.31.orig.tar.gz.delta  ippusbxd_1.31.orig.tar.gz.id  ippusbxd_1.33.orig.tar.gz.delta  ippusbxd_1.33.orig.tar.gz.id  readme.md
debian/: .git-dpm  changelog  control  copyright  ippusbxd.examples  ippusbxd.install  ippusbxd.manpages  rules  watch
debian/patches/: fix-spelling-error.patch
debian/upstream/: metadata
src/: CMakeLists.txt  FindCURL.cmake  capabilities.c  capabilities.h  dnssd.c  dnssd.h  http.c  http.h  ippusbxd.c  ippusbxd.h  logging.c  options.h  tcp.c  tcp.h  usb.c  usb.h
